# uptime

./: .env.example  .gitignore  CLAUDE.md  DOLT_REMOTE.md  Makefile  README.md  compose.yml  manifest  pyproject.toml
core/: uptime_checks.py
docs/: design-system.md  local-dev.md
docs/blog/: 2026-04-26-mayor-of-three-agents.md
docs/plans/: README.md
docs/plans/1-uptime-monitoring/: design.md  implementation-plan.md  mayor-agent-prompt.md
docs/plans/2-ui-landing/: design.md  implementation-plan.md  mayor-agent-prompt.md
docs/plans/3-security/: design.md  implementation-plan.md
lambda_handler/: alert_handler.py  handler.py
scripts/: create_local_tables.py  dev-stack.sh  dynamodb_tables.json  generate_demo_history.py  run_alert_eval_local.py  run_checks_local.py  run_checks_simulated.py  seed_demo.py
src/alerts/: services.py  urls.py  views.py
src/alerts/templates/alerts/: create.html  delete.html  events.html  list.html
src/auth/: apps.py  backends.py  urls.py  views.py
src/auth/templates/auth/: login.html
src/checks/: services.py  urls.py  views.py
src/landing/: views.py
src/organizations/: admin.py  middleware.py  models.py
src/organizations/migrations/: 0001_initial.py
src/results/: services.py  urls.py  views.py
src/status/: urls.py  views.py
src/templates/: base.html
src/uptime/: asgi.py  config.py  settings.py  urls.py  wsgi.py
tests/: test_alert_handler.py  test_alerts_services.py  test_auth_redirect.py  test_e2e_smoke.py  test_status_page.py  test_timeout_parsing.py  test_uptime_checks.py
(+8 files in other folders)
